--- a/index.html
+++ b/index.html
@@ -75,16 +75,20 @@
         </div>
     </div>
     <div class="flex flex-row bg-white items-center py-[5px] fixed bottom-[0px] w-[100%]">
-        <span class="material-symbols-outlined text-4xl mx-[5px]">
+
+        <span class="material-symbols-outlined text-3xl mx-[5px] hidden duration-500" id="arrow_btn">
+            arrow_forward_ios
+        </span>
+        <span class="material-symbols-outlined text-4xl mx-[5px] duration-500" id="add_btn">
             add
         </span>
-        <span class="material-symbols-outlined text-4xl mx-[5px]">
+        <span class="material-symbols-outlined text-4xl mx-[5px] duration-500" id="camera_btn">
             photo_camera
         </span>
-        <span class="material-symbols-outlined text-4xl mx-[5px]">
+        <span class="material-symbols-outlined text-4xl mx-[5px] duration-500" id="image_btn">
             image
         </span>
-        <div class="w-[50%] ml-[10px]">
+        <div class="w-[100%] ml-[10px] duration-500">
             <input type="text" placeholder="Aa"
                 class="rounded-[20px] h-[35px] bg-gray-100 px-[10px] w-[100%] focus:outline-none">
         </div>
@@ -112,7 +116,6 @@
     </div>
 </template>
 <template id="message_template_from_friend">
-
     <!-- メッセージ (相手から)-->
     <div class="w-[90%] flex flex-row max-h-max message　items-end" id="message">
         <!-- ユーザーアイコン -->
